--- a/src/app/components/cidade/cidade-list/cidade-list.component.html
+++ b/src/app/components/cidade/cidade-list/cidade-list.component.html
@@ -52,5 +52,14 @@
         </tr>
       </tfoot>
     </table>
+    <div>
+      <mat-paginator
+      [length]="totalElements"
+      [pageSizeOptions]="[5, 10, 50]"
+      [pageIndex]="currentPage"
+      [showFirstLastButtons]="true"
+      (page)="pageChanged($event)">
+    </mat-paginator>
+    </div>
   </div>
 </div>
