--- a/src/app/components/pessoa/pessoa-create/pessoa-create.component.html
+++ b/src/app/components/pessoa/pessoa-create/pessoa-create.component.html
@@ -42,7 +42,7 @@
 
             <div class="col-lg-3">
               <label for="numero" class="form-label">Número</label>
-              <input id="numero" formControlName="numero" class="form-control" inputmode="numeric" type="number" placeholder="Digite o N.º">
+              <input id="numero" formControlName="numero" class="form-control" inputmode="text" type="text" placeholder="Digite o N.º">
             </div>
         </div>
 
