--- a/src/app/components/pessoa/pessoa-update/pessoa-update.component.html
+++ b/src/app/components/pessoa/pessoa-update/pessoa-update.component.html
@@ -42,7 +42,7 @@
 
             <div class="col-lg-3">
               <label for="numero" class="form-label">Número</label>
-              <input id="numero" formControlName="numero" class="form-control" placeholder="Digite o N.º">
+              <input id="numero" formControlName="numero" type="text" inputmode="text" class="form-control" placeholder="Digite o N.º">
             </div>
         </div>
 
